YAML/sample_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-sample-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-sample-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: java-sample-app
    spec:
      containers:
      - args:
        - -jar
        - /app/app.jar
        command:
        - java
        image: hnyeong/devsecops-pipeline-test:latest
        imagePullPolicy: IfNotPresent
        name: java-sample
        ports:
        - containerPort: 8080
          protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: java-sample-app-svc
  name: java-sample-app-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: java-sample-app
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-sample-app-ing
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:219967435143:certificate/bbc95713-9a65-44bc-8978-735154c6cf40
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]'
    # alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: www.bluesunnywings.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: java-sample-app-svc
                port:
                  number: 8080
